Fix projects-footer having too much margin

--- a/app/ui/styles/landing.scss
+++ b/app/ui/styles/landing.scss
@@ -166,5 +166,5 @@ a {
 
 .projects-footer {
     text-align: center;
-    padding: 3.2rem 0;
+    padding-bottom: 3.2rem;
 }
